--- a/my-svelte-project/public/global.css
+++ b/my-svelte-project/public/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Palanquin&display=swap'); 
 body {
 	background-color: c1c1c1;
 }
@@ -13,6 +14,8 @@ body {
 }
 .Nav > div {
 	/* order: 0; */
+	font-family: "Palanquin";
+	font-size: 100%;
 	flex-direction: row;
 	text-align: center;
 	margin-left: 16%;
