--- a/Version 2/myapp/templates/Club/generic_club_page.html
+++ b/Version 2/myapp/templates/Club/generic_club_page.html
@@ -2,6 +2,8 @@
 {% extends "../spa/index.html" %}
 {% load static %}
 <!doctype html>
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,12 +11,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> {% endcomment %}
-  
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>{{ Name }} Club</title>
   </head>
   {% block content %} 
   <body class="container" onload="club_load()">
-
+    <center>
+      <h1 class = 'alert alert-success'>Subscribe Form</h1>
+      <h3 class="p-3 mb-2 bg-primary text-white" style = 'font-size: 50px;'>DataFlair Django Tutorials
+  </h3>
+  <form method="POST">
+      <!-- Very Important csrf Token -->
+      {% csrf_token %}
+      <div class = "form-group">
+          <p>
+          <h3>{{ form.as_p }}</h3>
+      </p>
+          <br>
+          <input type="submit" name="Subscribe" class = 'btn btn-primary btn-lg'>
+              </div>
+          </form>
+      </center>
 
   </body>
   {% endblock %}
@@ -48,16 +65,7 @@ img {
 
 <script>
   function club_load() {
-    console.log("test")
-    var counter = 0;
-    {% for img in Images%}
-    if (counter != 0) {
-      console.log("{{ img.photo }}")
-    document.getElementsByClassName("mainimg")[0].src = "../media{{ img.photo }}"
-    }
-    document.getElementsByClassName("mainimg")[0].src = "../media{{ img.photo }}"
-
-    {% endfor %}
+  
   }
 </script>
 
