--- a/Version 2/myapp/templates/Club/generic_club_page.html
+++ b/Version 2/myapp/templates/Club/generic_club_page.html
@@ -15,7 +15,7 @@
     <title>{{ Name }} Club</title>
   </head>
   {% block content %} 
-  <body class="container" onload="club_load()">
+  <body class="container">
     <center>
       <h1 class = 'alert alert-success'>Subscribe Form</h1>
       <h3 class="p-3 mb-2 bg-primary text-white" style = 'font-size: 50px;'>DataFlair Django Tutorials
@@ -64,9 +64,6 @@ img {
 </style>
 
 <script>
-  function club_load() {
-  
-  }
 </script>
 
 {% comment %} <style>body {
